Display Allianz investment plan in AgGrid

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@types/node": "^16.18.41",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "ag-grid-community": "^29.3.5",
+    "ag-grid-react": "^29.3.5",
+    "mathjs": "^11.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
